Add getTagById
Since we want to implement graphQL query on both Company and Tag, and the tags field in Company just have tag id, so we have to make a api that can translate a tag id to a full Tag entity.
